--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -38,5 +38,5 @@
 
 [[main]]
     name = "Research Group Website"
-    url = "https://www.mines.edu/glaciology"
+    url = "https://glaciology.mines.edu"
     weight = 80
