--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -277,9 +277,9 @@ plugins_js  = []
 ############################
 ## Marketing
 ############################
-[marketing]
-  google_analytics = "UA-172619102-1"
-  google_tag_manager = ""
+#[marketing]
+#  google_analytics = "UA-172619102-1"
+#  google_tag_manager = ""
 
 ############################
 ## Content Management System
